# wakem

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  test_output.txt
.claude/: settings.local.json
.github/workflows/: build.yml  codecov.yml  publish.yml
benches/: basic_benchmarks.rs  macos_bench.rs
benches/macos/: macos_bench.rs
crates/wakem/: Cargo.toml
crates/wakem-common/: Cargo.toml
crates/wakem-common/src/: lib.rs
crates/wakem-common/src/config/: mod.rs
crates/wakem-common/src/ipc/: mod.rs  server.rs
crates/wakem-common/src/types/: action.rs  layer.rs  mapping.rs  mod.rs
crates/wakem-common/tests/: action_test.rs  benchmark_test.rs  input_test.rs  integration_test.rs  ipc_test.rs  layer_manager_test.rs  layer_test.rs  mapping_test.rs  window_calc_test.rs
crates/wakem-common/tests/common/: mod.rs
crates/wakem/src/: client.rs  main.rs
crates/wakem/src/platform/windows/: mod.rs  tray.rs
crates/wakemctl/: Cargo.toml
crates/wakemctl/src/: main.rs
crates/wakemd/: Cargo.toml
crates/wakemd/src/: main.rs  server.rs
crates/wakemd/src/platform/windows/: context.rs  hook.rs  input.rs  launcher.rs  mod.rs  output.rs  window_manager.rs
crates/wakemd/src/runtime/: layer_manager.rs  mapper.rs  mod.rs
docs/: CONFIG.md  KEYBOARD.md  MACROS.md  WINDOW.md  autohotkey-analysis.md  autohotkey_reference.md  bugs.md  confg.md  config.md  developer.md  keymapper-complete-guide.md  keys.md  macros.md  window-switcher-analysis.md
examples/: minimal.toml  navigation_layer.toml  test_config.toml  tray_test.rs  window_manager.toml
scripts/: e2e_tray_exit.ps1  install.ps1
src/: cli.rs  client.rs  commands.rs  config.rs  constants.rs  daemon.rs  ipc.rs  lib.rs  main.rs  main_macos.rs  runtime_util.rs  shutdown.rs  tray.rs  window.rs
src/ipc/: auth.rs  client.rs  discovery.rs  io.rs  messages.rs  mod.rs  rate_limiter.rs  security.rs  server.rs  tcp_client.rs  tcp_server.rs
src/platform/: context.rs  input_device_common.rs  launcher_common.rs  macros.rs  mock.rs  mod.rs  output_device_common.rs  output_helpers.rs  traits.rs  tray_common.rs  types.rs  window_manager_common.rs  window_preset_common.rs
src/platform/common/: app_control.rs  input_device.rs  key_names.rs  launcher.rs  mod.rs  output_helpers.rs  tray.rs  window_manager.rs  window_ops.rs  window_preset.rs
src/platform/linux/: context.rs  input_device.rs  mod.rs  output_device.rs  tray.rs  window_api.rs  window_manager.rs
src/platform/macos/: app_control.rs  context.rs  input.rs  input_device.rs  launcher.rs  mock_window_api.rs  mod.rs  native_api.rs  notification.rs  output_device.rs  platform_utils.rs  tray.rs  window_api.rs  window_event_hook.rs  window_manager.rs  window_preset.rs
src/platform/macos/native_api/: ax_element.rs  cg_window.rs  coordinate.rs  core_audio.rs  display.rs  notification.rs  ns_workspace.rs
src/platform/mock/: mock_window_api.rs  mod.rs
src/platform/windows/: app_control.rs  context.rs  hook.rs  input.rs  input_device.rs  launcher.rs  mod.rs  notification.rs  output.rs  output_device.rs  platform_utils.rs  tray.rs  tray_api.rs  tray_minimal.rs  window_api.rs  window_event_hook.rs  window_manager.rs  window_preset.rs
src/runtime/: layer_manager.rs  macro_player.rs  mapper.rs  mod.rs  window_actions.rs
src/types/: action.rs  context.rs  input.rs  key_codes.rs  key_map.rs  layer.rs  macros.rs  mapping.rs  mod.rs  time_source.rs
tests/: action_test.rs  benchmark_test.rs  cli_test.rs  config_comprehensive_test.rs  config_edge_cases_test.rs  config_parser_test.rs  daemon_test.rs  e2e_macos.rs  e2e_windows_launcher.rs  e2e_windows_tray_exit.rs  e2e_windows_window.rs  input_test.rs  integration_test.rs  integration_tests_macos.rs  ipc_test.rs  it_core.rs  it_edge_cases.rs  it_ipc.rs  layer_test.rs  mapping_test.rs  platform_macos_specific.rs  platform_macos_tray.rs  platform_test.rs  platform_windows_specific.rs  platform_windows_tray.rs  prop_config.proptest-regressions  prop_config.rs  prop_macos_keycode.rs  property_tests.proptest-regressions  property_tests.rs  property_tests_macos.proptest-regressions  property_tests_macos.rs  runtime_test.rs  security_test.rs  tray_test.rs  types_comprehensive_test.rs  types_test.rs  ut_config_comprehensive.rs  ut_config_parser.rs  ut_core_cli.rs  (+17 more)
tests/config/: parser.rs
tests/core/: client.rs  security.rs
tests/integration/: core.rs  edge_cases.rs
tests/macos/: e2e.rs  specific.rs  tray.rs
tests/property/: macos_keycode.rs
tests/runtime/: mapper_full.rs
tests/types/: mapping_rule.rs
tests/windows/: e2e.rs  specific.rs
