[package]
name = "wakem"
version = "0.1.0"
authors = ["wang-q <wang-q@outlook.com>"]
edition = "2021"
license = "MIT"
repository = "https://github.com/wang-q/wakem"

[[bin]]
name = "wakem"
path = "src/main.rs"

[dependencies]
# Windows API
windows = { version = "0.52", features = [
    "Win32_Foundation",
    "Win32_UI_Input",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Accessibility",
    "Win32_System_Threading",
    "Win32_System_ProcessStatus",
    "Win32_Storage_FileSystem",
    "Win32_UI_Shell",
    "Win32_Graphics_Gdi",
    "Win32_Security",
    "Win32_System_LibraryLoader",
    "Win32_System_SystemServices",
    "Win32_System_WindowsProgramming",
    "Win32_System_Diagnostics",
    "Win32_System_Diagnostics_Debug",
] }

# 序列化
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# 错误处理
anyhow = "1.0"
thiserror = "1.0"

# 异步
tokio = { version = "1.35", features = ["full"] }

# 日志
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# 同步
parking_lot = "0.12"

# 命令行
clap = { version = "4.4", features = ["derive"] }

# 其他
indexmap = "2.0"
once_cell = "1.19"

# 加密（用于网络认证）
hmac = "0.12"
sha2 = "0.10"
rand = "0.8"

# 时间处理
chrono = { version = "0.4", features = ["serde"] }

# 异步 trait
async-trait = "0.1"

[profile.release]
lto = true
opt-level = 3
