[package]
name = "wakem"
version = "0.1.2"
authors = ["wang-q <wang-q@outlook.com>"]
edition = "2021"
license = "MIT"
repository = "https://github.com/wang-q/wakem"
publish = false

[[bin]]
name = "wakem"
path = "src/main.rs"

[dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Async
tokio = { version = "1.35", features = ["full"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Sync
parking_lot = "0.12"

# CLI
clap = { version = "4.4", features = ["derive"] }

# Other
indexmap = "2.0"
once_cell = "1.19"
lazy_static = "1.4"
dirs = "5"
libc = "0.2"  # For native API calls (pid_t, c_char, proc_pidpath)
regex = "1.10"

# Crypto (for network auth)
hmac = "0.12"
sha2 = "0.10"
rand = "0.8"
zeroize = { version = "1.7", features = ["derive"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# Keyboard code mapping (cross-platform)
keyboard-codes = { version = "0.3", features = ["serde", "phf"] }

# Async trait
async-trait = "0.1"

[features]
default = []
# Workaround for objc crate using deprecated cargo-clippy cfg
cargo-clippy = []

# Platform-specific dependencies
[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_UI_Input",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Accessibility",
    "Win32_System_Threading",
    "Win32_System_ProcessStatus",
    "Win32_Storage_FileSystem",
    "Win32_UI_Shell",
    "Win32_Graphics_Gdi",
    "Win32_Security",
    "Win32_System_LibraryLoader",
    "Win32_System_SystemServices",
    "Win32_System_WindowsProgramming",
    "Win32_System_Diagnostics",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_Console",
] }
windows-core = "0.61"

[target.'cfg(target_os = "macos")'.dependencies]
# macOS Core Graphics for input/output
core-graphics = { version = "0.24" }
core-foundation = { version = "0.10" }
# macOS Cocoa for UI
cocoa = { version = "0.26" }
objc = { version = "0.2" }
# macOS Accessibility
accessibility = { version = "0.2" }

[dev-dependencies]
# Property testing
proptest = "1.4"

# Benchmarking
criterion = "0.5"

[[bench]]
name = "basic_benchmarks"
harness = false

# Note: macOS-specific benchmarks can be run with:
# cargo bench --bench macos_bench (on macOS only)
# The macos_bench.rs file is located at benches/macos/macos_bench.rs

[profile.bench]
opt-level = 3
debug = true

[profile.release]
lto = true
