[package]
name = "wakem"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "wakem"
path = "src/main.rs"

[dependencies]
wakem-common = { workspace = true }
windows = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
